--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         <li>You care deeply</li>
         <li>You’re adorable when you're sleepy</li>
         <li>You inspire me daily</li>
-        <li>Your cuddles are the best therapy</li>
+        <li>Your the best therapy</li>
         <li>You have a beautiful heart</li>
         <li>You make me feel lucky</li>
         <li>You’re my biggest cheerleader</li>
@@ -308,7 +308,7 @@
         <li>You see the good in everything</li>
         <li>You’re my daily motivation</li>
         <li>You’re my peace</li>
-        <li>You give the best kisses</li>
+        <li>You give the best hugs</li>
         <li>You make me feel safe</li>
         <li>You’re not afraid to be vulnerable</li>
         <li>You’re always learning</li>
